# api-bancaria-async-fastapi

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  requiriments.txt
src/: database.py  main.py
src/controllers/: account_controller.py  auth_controller.py  transaction_controller.py
src/core/: config.py  database.py  security.py
src/models/: accounts_models.py  base.py  enum_type.py  transactions_models.py  users_models.py
src/routers/: transaction_router.py
src/schemas/: account.py  account_schemas.py  auth_schemas.py  transaction_schemas.py  transation.py  user_schemas.py
src/services/: accounts.py  accounts_service.py  transactions_service.py  users_service.py
src/tests/: tests_schemas.py
src/utils/: cpf_validator.py
src/views/: account_views.py  transaction_views.py
